# digisoul-backend

./: .dockerignore  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
.github/workflows/: deploy.yml
digisoul/: manage.py
digisoul/digisoul/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
digisoul/web/: admin.py  signals.py
digisoul/web/documents/utils/: custom_embeddings.py  insert_documents.py
digisoul/web/migrations/: 0001_initial.py  0002_character.py  0002_systemprompt.py  0003_message_audio_message.py  0004_message_tts_audio.py  0005_charactervoice_character_gender_and_more.py  0006_digisouluser_account_level_digisouluser_cas_id.py  0007_alter_digisouluser_managers_and_more.py  0008_alter_digisouluser_email.py
digisoul/web/models/: Character.py  Friends.py  Prompt.py  User.py  __init__.py
digisoul/web/serializers/character/: CharacterSerializers.py
digisoul/web/serializers/friends/: FriendsSerializers.py  MessageSerializers.py
digisoul/web/serializers/user/account/: AccountSerializers.py
digisoul/web/templates/: index.html
digisoul/web/urls/: character.py  characterSettings.py  characterVoice.py  friends.py  index.py  token.py  tti.py  user.py
digisoul/web/utils/: ChatGraph.py  CustomUUID.py  ImageGraph.py  MemoryGraph.py  TTSHelper.py  delete_old_audio.py  delete_old_photo.py
digisoul/web/views/: index.py
digisoul/web/views/asr/: asr.py
digisoul/web/views/character/: character.py  characterSettings.py  characterVoice.py
digisoul/web/views/friends/: friends.py  message.py
digisoul/web/views/tti/: tti.py
(+4 files in other folders)
